--- a/Programmes/04-Module4-LeServeurNodeJS-Express/siteServeur/views/accueil.html.twig
+++ b/Programmes/04-Module4-LeServeurNodeJS-Express/siteServeur/views/accueil.html.twig
@@ -1,5 +1,8 @@
 {% extends "base.html.twig" %}
 
+{% block titre %} Ma page d'accueil {% endblock %}
 {% block contenu %}
-    <h1>Ma page d'accueil !! </h1>
+    <div> Ici le contenu de ma page 
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum cumque ea ipsum id quod enim commodi qui quia. Illum in suscipit repudiandae pariatur asperiores ipsam distinctio nisi assumenda esse? Dolor?
+    </div>
 {% endblock %}
