--- a/Programmes/04-Module4-LeServeurNodeJS-Express/siteServeur/views/base.html.twig
+++ b/Programmes/04-Module4-LeServeurNodeJS-Express/siteServeur/views/base.html.twig
@@ -24,7 +24,10 @@
             </div>
         </div>
     </nav>
-    {% block contenu %} {% endblock %}
+    <div class="container">
+        <h1 class="border border-dark m-2 p-2 rounded text-center">{% block titre %} {% endblock %}</h1>
+        {% block contenu %} {% endblock %}
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
