--- a/Programmes/04-Module4-LeServeurNodeJS-Express/siteServeur/views/base.html.twig
+++ b/Programmes/04-Module4-LeServeurNodeJS-Express/siteServeur/views/base.html.twig
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://bootswatch.com/5/lumen/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Sigmar+One&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -25,7 +27,7 @@
         </div>
     </nav>
     <div class="container">
-        <h1 class="border border-dark m-2 p-2 rounded text-center">{% block titre %} {% endblock %}</h1>
+        <h1 class="border border-dark m-2 p-2 rounded text-center text-white customBackgroundColorBlue">{% block titre %} {% endblock %}</h1>
         {% block contenu %} {% endblock %}
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
