--- a/Programmes/04-Module4-LeServeurNodeJS-Express/siteServeur/views/base.html.twig
+++ b/Programmes/04-Module4-LeServeurNodeJS-Express/siteServeur/views/base.html.twig
@@ -22,6 +22,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/">Accueil</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/livres">Livres</a>
+                    </li>
                 </ul>
             </div>
         </div>
