04-Module4-LeServeurNodeJS-Express-15-TemplateAffichantUnLivre

--- a/Programmes/04-Module4-LeServeurNodeJS-Express/siteServeur/views/livres/liste.html.twig
+++ b/Programmes/04-Module4-LeServeurNodeJS-Express/siteServeur/views/livres/liste.html.twig
@@ -13,28 +13,28 @@
         </thead>
         <tbody>
             <tr>
-                <td>L'Algorithmique selon H2PROG</td>
+                <td><a href="/livres/L'Algorithmique selon H2PROG">L'Algorithmique selon H2PROG</a></td>
                 <td>Matthieu GASTON</td>
                 <td>200</td>
                 <td><button type="button" class="btn btn-warning m-2">Modifier</button></td>
                 <td><button type="button" class="btn btn-danger m-2">Supprimer</button></td>
             </tr>
             <tr>
-                <td>La France du 19ème</td>
+                <td><a href="/livres/La France du 19ème">La France du 19ème</a></td>
                 <td>Albert Patrick</td>
                 <td>500</td>
                 <td><button type="button" class="btn btn-warning m-2">Modifier</button></td>
                 <td><button type="button" class="btn btn-danger m-2">Supprimer</button></td>
             </tr>
             <tr>
-                <td>Le monde des animaux</td>
+                <td><a href="/livres/Le monde des animaux">Le monde des animaux</a></td>
                 <td>Marc Merlin</td>
                 <td>250</td>
                 <td><button type="button" class="btn btn-warning m-2">Modifier</button></td>
                 <td><button type="button" class="btn btn-danger m-2">Supprimer</button></td>
             </tr>
             <tr>
-                <td>Le virus d'Asie</td>
+                <td><a href="/livres/Le virus d'Asie">Le virus d'Asie</a></td>
                 <td>Tya Milo</td>
                 <td>120</td>
                 <td><button type="button" class="btn btn-warning m-2">Modifier</button></td>
