--- a/Programmes/05-Module 5-BaseDeDonneesEtCRUD/siteServeur/views/livres/liste.html.twig
+++ b/Programmes/05-Module 5-BaseDeDonneesEtCRUD/siteServeur/views/livres/liste.html.twig
@@ -1,7 +1,15 @@
 {% extends "base.html.twig" %}
 
 {% block titre %} Page listant les livres {% endblock %}
+
 {% block contenu %}
+    
+{% if message|length > 0 %}
+    <div class="alert alert-{{message.type}}" role="alert">
+        {{message.contenu}}
+    </div>
+{% endif %}
+
     <table class="table text-center monTableau" id="tableauLivres">
         <thead>
             <tr class="table-dark">
