05-Module 5-BaseDeDonneesEtCRUD-13-UploadDImage

--- a/Programmes/05-Module 5-BaseDeDonneesEtCRUD/siteServeur/views/livres/liste.html.twig
+++ b/Programmes/05-Module 5-BaseDeDonneesEtCRUD/siteServeur/views/livres/liste.html.twig
@@ -35,7 +35,7 @@
         </tbody>
     </table>
     <button onclick="afficherFormulaire()" class="btn btn-success w-100">Ajouter</button>
-    <form id="ajoutFormulaire" class="d-none" method="POST" action="">
+    <form id="ajoutFormulaire" class="d-none" method="POST" action="" enctype="multipart/form-data">
         <fieldset>
             <legend>Création d'un livre</legend>
             <div class="mb-3">
@@ -53,6 +53,10 @@
             <div class="mb-3">
                 <label for="description" class="form-label">Description</label>
                 <textarea class="form-control" id="description" rows="3" name="description"></textarea>
+            </div>
+            <div class="mb-3">
+                <label for="image" class="form-label">Image</label>
+                <input type="file" class="form-control-file" name="image" id="image">
             </div>
             <button class="btn btn-primary" type="submit">Valider</button>
         </fieldset>
