--- a/Programmes/05-Module 5-BaseDeDonneesEtCRUD/siteServeur/views/livres/livre.html.twig
+++ b/Programmes/05-Module 5-BaseDeDonneesEtCRUD/siteServeur/views/livres/livre.html.twig
@@ -40,7 +40,7 @@
                     <h2>Informations</h2>
                     <div>Auteur : {{livre.auteur}}</div>
                     <div>Nombre de pages : {{livre.nombreDePages}}</div>
-                    <img src="https://picsum.photos/200/200" alt="">
+                    <img src="/images/{{livre.image}}" alt="">
                 </div>
                 <div class="col-6">
                     <h2>Résumé : </h2>
