--- a/Programmes/06-Module6-RelationEntreDeuxCollections/siteServeur/views/livres/liste.html.twig
+++ b/Programmes/06-Module6-RelationEntreDeuxCollections/siteServeur/views/livres/liste.html.twig
@@ -25,7 +25,7 @@
             <tr>
                 <td class="align-middle"><img src="/images/{{livre.image}}" class="img-thumbnail" width="60px" alt=""></td> 
                 <td class="align-middle"><a href="/livres/{{ livre._id }}"> {{livre.nom}} </a></td>
-                <td class="align-middle"><a href="/auteurs/{{livre.auteur}}">{{livre.auteur}}</a></td>
+                <td class="align-middle"><a href="/auteurs/{{livre.auteur._id}}">{{livre.auteur.prenom}} {{livre.auteur.nom}}</a></td>
                 <td class="align-middle"> {{livre.nombreDePages}} </td>
                 <td class="align-middle"><a href="/livres/modification/{{ livre._id }}" class="btn btn-warning m-2">Modifier</a></td>
                 <td class="align-middle">
