--- a/Programmes/06-Module6-RelationEntreDeuxCollections/siteServeur/views/livres/livre.html.twig
+++ b/Programmes/06-Module6-RelationEntreDeuxCollections/siteServeur/views/livres/livre.html.twig
@@ -56,7 +56,7 @@
         <div class="row m-3">
             <div class="col-6">
                 <h2>Informations</h2>
-                <div>Auteur : {{livre.auteur}}</div>
+                <div>Auteur : <a href="/auteurs/{{livre.auteur._id}}">{{livre.auteur.prenom}} {{livre.auteur.nom}}</a></div>
                 <div>Nombre de pages : {{livre.nombreDePages}}</div>
                 <img src="/images/{{livre.image}}" alt="">
             </div>
