06-Module6-RelationEntreDeuxCollections-06-ModificationDUnLivre-ListeDeroulanteDAuteurs

--- a/Programmes/06-Module6-RelationEntreDeuxCollections/siteServeur/views/livres/livre.html.twig
+++ b/Programmes/06-Module6-RelationEntreDeuxCollections/siteServeur/views/livres/livre.html.twig
@@ -19,8 +19,22 @@
                     </div>
                     <div class="mb-3">
                         <label for="auteur" class="form-label">Auteur</label>
-                        <input type="text" class="form-control" id="auteur" name="auteur" value="{{livre.auteur}}">
+                        <select class="form-control" name="auteur" id="auteur">
+                            {% for auteur in auteurs %}
+                                <option value="{{auteur._id}}"
+                                    {% if auteur.id == livre.auteur._id %}
+                                        selected 
+                                    {% endif %} 
+                                    >
+                                    {{auteur.prenom}} {{auteur.nom}}
+                                </option>
+                            {% endfor %}
+                        </select>
                     </div>
+                    {# <div class="mb-3">
+                        <label for="auteur" class="form-label">Auteur</label>
+                        <input type="text" class="form-control" id="auteur" name="auteur" value="{{livre.auteur}}">
+                    </div> #}
                     <div class="mb-3">
                         <label for="nombreDePages" class="form-label">Nombre de pages</label>
                         <input type="number" class="form-control" id="nombreDePages" name="nombreDePages" value="{{livre.nombreDePages}}">
