--- a/Programmes/06-Module6-RelationEntreDeuxCollections/siteServeur/views/base.html.twig
+++ b/Programmes/06-Module6-RelationEntreDeuxCollections/siteServeur/views/base.html.twig
@@ -25,6 +25,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/livres">Livres</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/auteurs">Auteurs</a>
+                    </li>
                 </ul>
             </div>
         </div>
