--- a/Programmes/06-Module6-RelationEntreDeuxCollections/siteServeur/views/auteurs/auteur.html.twig
+++ b/Programmes/06-Module6-RelationEntreDeuxCollections/siteServeur/views/auteurs/auteur.html.twig
@@ -12,4 +12,21 @@
             Femme
         {% endif %}
     </div>
+    <h2>Livres</h2>
+    <div class="row m-3">
+        {% for livre in auteur.livres %}
+            <div class="col-6">
+                <div class="row">
+                    <div class="col-6">
+                        <img src="/images/{{livre.image}}" class="img-thumbnail">
+                    </div>
+                    <div class="col-6">
+                        <div> Titre : <a href="/livres/{{livre._id}}">{{livre.nom}}</a></div>
+                        <div> Nombres de pages : {{livre.nombreDePages}}</div>
+                        <div> Description : {{livre.description}}</div>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
 {% endblock %}
