--- a/Programmes/06-Module6-RelationEntreDeuxCollections/siteServeur/views/auteurs/liste.html.twig
+++ b/Programmes/06-Module6-RelationEntreDeuxCollections/siteServeur/views/auteurs/liste.html.twig
@@ -24,7 +24,7 @@
                 <td class="align-middle"><a href="/auteurs/{{auteur._id}}">{{auteur.prenom}}</a></td>
                 <td class="align-middle">{{auteur.nom}}</td>
                 <td class="align-middle">{{auteur.livres|length}}</td>
-                <td class="align-middle"><a href="" class="btn btn-warning m-2">Modifier</a></td>
+                <td class="align-middle"><a href="/auteurs/modification/{{auteur._id}}" class="btn btn-warning m-2">Modifier</a></td>
                 <td class="align-middle">
                     <form method="POST" action="auteurs/delete/{{auteur._id}}" onsubmit= "return confirm('Voulez-vous vraiment supprimer l\'auteur {{ auteur.prenom }} {{auteur.nom}} ?');">
                         <button class="btn btn-danger m-2" type="submit">Supprimer</button>
